Aligning for issue TOC #12

--- a/less/objects/article_summary.less
+++ b/less/objects/article_summary.less
@@ -42,21 +42,22 @@
 
 .article_summary {
 	max-width: 31%;
-	flex-grow: 1;
 	margin-bottom: 60px;
+	margin-right: 2%;
 }
 
 
 @media (min-width: 768px) and (max-width: 1199px) {
 	.article_summary {
-		max-width: 47%;
+		max-width: 48%;
+		margin-right: 2%;
 	}
 }
 
 
 @media (max-width: 767px) {
 	.article_summary {
-		max-width: 97%;
+		max-width: 100%;
 	}
 
 	.article_summary {
