--- a/less/objects/issue_toc.less
+++ b/less/objects/issue_toc.less
@@ -62,7 +62,7 @@
 .section_content {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: flex-start;
 }
 
 .more_button {
